[package]
name = "brrr"
version = "0.1.4"
description = "Handles the printing and burning of $CASH, using Saber LP Arrows as collateral."
edition = "2021"
homepage = "https://cashio.app"
repository = "https://github.com/CashioApp/cashio"
authors = ["Ghost Chain <ghost@cashio.app>"]
license = "AGPL-3.0"
keywords = ["solana", "anchor", "crate", "cashio", "saber"]

[lib]
crate-type = ["cdylib", "lib"]
name = "brrr"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = ">=0.17.0"
anchor-spl = ">=0.17.0"
arrow-sunny = { version = "^0.1", features = ["cpi"] }
crate-token = { version = "^0.4", features = ["cpi"] }
stable-swap-anchor = "1.6.6"
static-pubkey = "1.0.2"
vipers = "^1.5"
bankman = { path = "../bankman", version = "0.1.0", features = ["cpi"] }
converter = { path = "./converter", version = "0.1.0" }
