[package]
name = "brrr"
version = "0.2.1"
description = "Handles the printing and burning of $CASH, using Saber LP Arrows as collateral."
edition = "2021"
homepage = "https://cashio.app"
repository = "https://github.com/CashioApp/cashio"
authors = ["Ghost Chain <ghost@cashio.app>"]
license = "AGPL-3.0"
keywords = ["solana", "anchor", "crate", "cashio", "saber"]

[lib]
crate-type = ["cdylib", "lib"]
name = "brrr"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "^0.22"
anchor-spl = "^0.24"
arrow-sunny = { version = "^0.2", features = ["cpi"] }
crate-token = { version = "^0.5", features = ["cpi"] }
stable-swap-anchor = "^1.7"
static-pubkey = "1.0.2"
vipers = "^2"
bankman = { path = "../bankman", version = "0.2.0", features = ["cpi"] }
converter = { path = "./converter", version = "0.2.0" }
